[package]
name = "pdf-api"
version = "0.1.0"
edition = "2024"

[dependencies]
headless_chrome = "1.0.17"
tokio = { version = "1.47.0", features = ["full"] }
anyhow = "1.0.98"
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
uuid = { version =  "1.17.0", features = ["v4"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"